--- a/index.html
+++ b/index.html
@@ -1,18 +1,5 @@
-<?php
-    $dsn = 'mysql:dbname=test_db;host=localhost;';
-    $user = 'koizumi';
-    $password = 'Paitan45tenTei@*';
-    try {
-        $dbh = new PDO($dsn, $user, $password);
-        %sql = "select * from user;"
-        %result = $dbh->query(%sql);
-    } catch (PDOException $e) {
-        print "Failed: " . $e->getMessage() . "\n";
-        exit();
-    }
-?>
 <!DOCTYPE html>
-<html lang="ja">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -65,13 +52,21 @@
                         </tr>
                     </thead>
                     <tbody>
-                        <?php foreach($result as $value) { ?>
-                            <tr>
-                                <th><?php echo '$value[id];'?></th>
-                                <td><?php echo '$value[name];'?></td>
-                                <td><?php echo '$value[age];'?></td>
-                            </tr>
-                        <?php} ?>
+                        <tr>
+                            <th>1</th>
+                            <td>test</td>
+                            <td>20</td>
+                        </tr>
+                        <tr>
+                            <th>1</th>
+                            <td>test</td>
+                            <td>20</td>
+                        </tr>
+                        <tr>
+                            <th>1</th>
+                            <td>test</td>
+                            <td>20</td>
+                        </tr>
                     </tbody>
                 </table>
             </div>
